--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="mode">
+    Dark mode:            
+    <span class="change">OFF</span>
+</div>
    
      <section id="content-sec" >
         <div class="header">
             
             <input class="add-input" type="text" name="" id="">
             
-            <button type="submit" class="add-btn">Create Task</button>
+            <button type="submit" class="add-btn">Add Task</button>
         </div>
       <div class="container">
           <div class="container-list" id="box1">
@@ -82,6 +86,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
